--- a/Bowling Scoring System/Bowling Scoring System.vbproj
+++ b/Bowling Scoring System/Bowling Scoring System.vbproj
@@ -205,7 +205,7 @@
     <Resource Include="Resources\animationEnabled.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\pinsFalling.wav" />
+    <EmbeddedResource Include="SoundResources\pinsFalling.wav" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\soundDisable.png" />
@@ -214,7 +214,7 @@
     <Resource Include="Resources\soundEnable.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\backingMusic.mp3" />
+    <EmbeddedResource Include="SoundResources\backingMusic.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
