--- a/Bowling Scoring System/Bowling Scoring System.vbproj
+++ b/Bowling Scoring System/Bowling Scoring System.vbproj
@@ -220,5 +220,11 @@
   <ItemGroup>
     <Resource Include="Resources\backButton.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\loadButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\saveButton.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
