--- a/Bowling Scoring System/Bowling Scoring System.vbproj
+++ b/Bowling Scoring System/Bowling Scoring System.vbproj
@@ -71,6 +71,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Frame.vb" />
+    <Compile Include="HelpWindow.xaml.vb">
+      <DependentUpon>HelpWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Resource1.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -78,6 +81,10 @@
     </Compile>
     <Compile Include="Row.vb" />
     <Compile Include="SoundUnit.vb" />
+    <Page Include="HelpWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -225,6 +232,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\saveButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\helpButton.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
